@@ -53,8 +53,9 @@ function begin ()
    local k = 1
 
    for i, j in ipairs(plan) do  --choose only Dvaered planets (and no stations)
-      local classofj = j:class()
-      if j:faction() == faction.get("Dvaered") and classofj ~= "0" and classofj ~= "1" and classofj ~= "2" then
+      local jtags = j:tags()
+      local jserve = j:services()
+      if j:faction()==faction.get("Dvaered") and (not jtags.station) and jserve.land and  jserve.inhabited and jserve.refuel then
          cand[k] = j
          k = k+1
       end
