@@ -3,6 +3,7 @@
    * Initialize outfit Lua scripts when added in the equipment view so that flicker drive signature gets properly computed
    * Flicker drive no longer displays -10% signature range bonus twice when equipped
    * Fixed crash when selling deployed ship
+   * Gave the Dvaered warlord event better criteria so they don't attack the hypergate
    * `shark/sh01_corvette`: have the pilot jump in from the same system as the player
    * `minerva/kex03`: have mission claim the crimson gauntlet to prevent unwanted spawns
    * `dvaered/gauntlet`: have mission claim the system if it can, but not fail if it can't
